...
                                </constraints>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Settings Button" image="settings-icon">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <state key="normal" title="Start Game">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="104" height="326"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Player 1" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="oPg-gp-h40" customClass="UIPlayerTextField">
                                                <rect key="frame" x="0.0" y="50" width="104" height="30"/>
                                                <constraints>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" alpha="0.0" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Player 2" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ErM-7M-8qC" customClass="UIPlayerTextField">
                                                <rect key="frame" x="0.0" y="115.5" width="104" height="30"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" alpha="0.0" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Player 3" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3EQ-wO-ywD" customClass="UIPlayerTextField">
                                                <rect key="frame" x="0.0" y="180.5" width="104" height="30"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" alpha="0.0" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Player 4" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="gTZ-PY-7an" customClass="UIPlayerTextField">
                                                <rect key="frame" x="0.0" y="246" width="104" height="30"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                <rect key="frame" x="180" y="336" width="240" height="29"/>
                                <segments>
                                    <segment title="Light"/>
                                    <segment title="Green"/>
                                    <segment title="Dark"/>
                                </segments>
                                <connections>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
